add addSession and deleteSession